- renamed classes for better context - replace deprecated methods